load fonts; fix browser chrome covering content on mobile

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -7,6 +7,14 @@
 @use "home";
 
 html {
+  font-family: system-ui, sans-serif; // Fallback font
+}
+
+html.fonts-loaded {
+  font-family: "IBM Plex Mono", monospace;
+}
+
+html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -68,6 +76,7 @@ body {
 }
 
 // work styles
+
 .work-container {
   display: flex;
   flex-direction: column;
@@ -88,11 +97,46 @@ body {
   background-color: var(--button_background_one);
   padding: 4px;
   border-radius: 12px;
+  position: relative;
+  overflow: hidden;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: var(--background_thin_veil);
+    animation: pulse 1.5s infinite;
+  }
+
+  &.loaded::before {
+    display: none;
+  }
+
+  .work-img {
+    width: 100%;
+    border-radius: 8px;
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+  }
+
+  &.loaded .work-img {
+    opacity: 1;
+  }
 }
 
-.work-img {
-  width: 100%;
-  border-radius: 8px;
+@keyframes pulse {
+  0% {
+    opacity: 0.6;
+  }
+  50% {
+    opacity: 0.8;
+  }
+  100% {
+    opacity: 0.6;
+  }
 }
 
 // about styles
